VOLT Refactor ReviewController: replace collect with toList for improved readability and remove unused ReviewIntegrationTest class